Move stems with headtube angle changes

--- a/index.html
+++ b/index.html
@@ -22,44 +22,49 @@
       box-sizing: inherit;
     }
   </style>
+  <script type="importmap">
+    {
+      "imports": {
+        "stimulus.js": "https://unpkg.com/@hotwired/stimulus/dist/stimulus.js",
+        "konva.js": "https://unpkg.com/konva@9/konva.min.js"
+      }
+    }
+  </script>
 </head>
 
-<body>
-  <div style="min-height: 60vh; position: relative;">
-    <div class="col-3" style="position: absolute; bottom: 0; z-index: 1; left: 0;">
-      <h3 class="mb-1">WHAT STEM?</h3>
-    </div>
-    <div class="col-3 mb-2" style="position: absolute; bottom: 0; z-index: 1; right: 0;">
-      <div class="input-group">
-        <input class="form-control" type="number" id="headtubeAngle" step="0.1" name="headtube_angle" required
-          value="72" min="0" max="90" aria-label="Headtube Angle" aria-describedby="headtubeAngleLabel">
+<body data-controller="stems">
+  <div>
+    <div style="min-height: 60vh; position: relative;">
+      <div class="col-3" style="position: absolute; bottom: 0; z-index: 1; left: 0;">
+        <h3 class="mb-1">WHAT STEM?</h3>
       </div>
+      <div class="col-3 mb-2" style="position: absolute; bottom: 0; z-index: 1; right: 0;">
+        <input data-controller="head-tube" data-head-tube-target="angle" data-stems-target="headTubeAngle"
+          data-action="head-tube#draw stems#drawAll " class="form-control" type="number" step="0.1" required value="72" min="0"
+          max="90">
+      </div>
+      <div
+        data-controller="grid"
+        data-grid-target="container"
+        data-action="resize@window->grid#resize"
+        id="container"
+        style="min-height: inherit;"
+      ></div>
     </div>
-    <div id="container" style="min-height: inherit;"></div>
   </div>
-  <div class="container my-5">
+  <div class="my-5">
     <div class="d-flex justify-content-center overflow-auto gap-3">
-      <div class="card" style="min-width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Stem 1</h5>
-          <p class="card-text">Length 110mm | Angle 7°</p>
-          <p class="card-text">Reach 112mm | Stack 9mm</p>
-          <p class="card-text">Effective Reach 112mm | Stack 9mm</p>
-          <button class="btn btn-danger">Remove</a>
-        </div>
-      </div>
-
-      <div class="card" style="min-width: 18rem;">
+      <div data-stems-target="stemFormCard" class="card" style="min-width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Add stem to comparison</h5>
-          <form>
+          <form data-action="stems#add">
             <div class="mb-2">
               <label for="length" class="form-label">Length (mm)</label>
-              <input type="number" step="1" class="form-control" id="length">
+              <input data-stems-target="length" type="number" step="1" class="form-control" id="length">
             </div>
             <div class="mb-3">
               <label for="angle" class="form-label">Angle °</label>
-              <input type="number" step="1" class="form-control" id="angle">
+              <input data-stems-target="angle" type="number" step="1" class="form-control" id="angle">
             </div>
             <button type="submit" type="button" class="btn btn-primary">Add</button>
           </form>
@@ -67,51 +72,29 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" id="new-stem-form-modal" tabindex="-1" aria-labelledby="new-stem-form" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="new-stem-form">Add stem to comparison</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <form>
-          <div class="modal-body">
-            <div class="mb-3">
-              <label for="length" class="form-label">Length (mm)</label>
-              <input type="number" step="1" class="form-control" id="length">
-            </div>
-            <div class="mb-3">
-              <label for="angle" class="form-label">Angle °</label>
-              <input type="number" step="1" class="form-control" id="angle">
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="submit" type="button" class="btn btn-primary">Add</button>
-            </div>
-        </form>
-      </div>
-    </div>
-  </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
-
   <script type="module">
-    import * as Konva from "https://unpkg.com/konva@9/konva.min.js";
-    import { Application, Controller } from "https://unpkg.com/@hotwired/stimulus/dist/stimulus.js"
+    import "konva.js"
+    import { Application, Controller } from "stimulus.js"
+    import StemsController from "./js/controllers/stems_controller.js"
+    import GridController from "./js/controllers/grid_controller.js"
+    import HeadTubeController from "./js/controllers/head_tube_controller.js"
+
+    window.stage = new Konva.Stage({
+      container: document.getElementById("container"),
+      height: container.offsetHeight,
+      width: container.offsetWidth
+    })
+
     window.Stimulus = Application.start()
 
-    Stimulus.register("stems", class extends Controller {
-      static targets = ["name", "output"]
-
-      add() {
-        this.outputTarget.textContent =
-          `Hello, ${this.nameTarget.value}!`
-      }
-    })
+    Stimulus.register("stems", StemsController)
+    Stimulus.register("grid", GridController)
+    Stimulus.register("head-tube", HeadTubeController)
   </script>
-  <script src="index.js"></script>
 </body>
 
 </html>
