Align stems cards container

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="my-5">
-    <div class="d-flex justify-content-center overflow-auto gap-3">
+    <div class="d-flex overflow-auto gap-3" style="justify-content: safe center;">
       <div data-stems-target="stemFormCard" class="card" style="min-width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Add stem to comparison</h5>
