--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="col-3 mb-2" style="position: absolute; bottom: 0; z-index: 1; right: 0;">
         <input data-controller="head-tube" data-head-tube-target="angle" data-stems-target="headTubeAngle"
-          data-action="head-tube#draw stems#drawAll " class="form-control" type="number" step="0.1" required value="72" min="0"
+          data-action="head-tube#draw stems#drawAll stems#updateCalc" class="form-control" type="number" step="0.1" required value="72" min="0"
           max="90">
       </div>
       <div
